--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,25 @@
 name: Build APK
-
 on:
   push:
     branches: [ main ]
-
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
       image: kivy/buildozer:latest
-
     steps:
-    - uses: actions/checkout@v3
-
-    - name: Build APK
-      run: |
-        buildozer -v android debug
-
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
-      with:
-        name: apk
-        path: bin/*.apk
+      - uses: actions/checkout@v3
+      - name: Show versions
+        run: |
+          python --version
+          pip --version
+          buildozer --version || true
+      - name: Build APK (debug)
+        run: |
+          export PATH=$PATH:~/.local/bin
+          buildozer -v android debug
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: apk
+          path: bin/*.apk
