--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,70 +1,47 @@
-name: Build APK
-
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Install system deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk python3-pip unzip wget zip
-
-      - name: Install Buildozer & Cython
-        run: |
-          python3 -m pip install --upgrade pip
-          python3 -m pip install --user buildozer cython
-          export PATH=$PATH:$HOME/.local/bin
-
-      - name: Install Android commandline tools + SDK + build-tools
+- name: Install Android commandline tools + SDK + build-tools
         env:
           ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
         run: |
           set -e
           mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
           cd /tmp
-          # commandlinetools zip을 다운로드 (Google 링크가 변경될 수 있으니 실패하면 에러 메시지 참고)
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-*.zip -O cmdline-tools.zip || true
-          # 만약 위 wget이 실패하면, 브라우저에서 최신 commandlinetools zip 파일명을 확인해 직접 넣어야 할 수 있습니다.
-          unzip -q cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools || true
-          # 정렬된 디렉터리 구조: $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager 로 사용되도록 복사/이동
-          if [ -d "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" ]; then
-            mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools $ANDROID_SDK_ROOT/cmdline-tools/latest
-          elif [ -d "$ANDROID_SDK_ROOT/cmdline-tools/tools" ]; then
-            mv $ANDROID_SDK_ROOT/cmdline-tools/tools $ANDROID_SDK_ROOT/cmdline-tools/latest
+
+          # 1) developer.android.com 페이지에서 실제 commandlinetools 다운로드 링크를 추출해서 사용
+          #    (페이지 구조가 바뀌지 않는 한 안정적으로 최신 link를 얻어옴)
+          TOOL_URL=$(curl -s https://developer.android.com/studio | \
+            grep -oE 'https://dl.google.com/android/repository/commandlinetools-linux-[0-9_]+_latest.zip' | head -n1)
+
+          if [ -z "$TOOL_URL" ]; then
+            echo "ERROR: couldn't find commandlinetools download URL on developer.android.com"
+            exit 1
           fi
+
+          echo "Downloading command line tools from: $TOOL_URL"
+          wget -q "$TOOL_URL" -O cmdline-tools.zip
+
+          # 2) 확인: 다운받은 파일이 실제 zip인지 검사
+          if ! unzip -tq cmdline-tools.zip >/dev/null 2>&1; then
+            echo "Downloaded file is not a valid zip. Aborting."
+            # 출력 파일(HTML 등)을 로그로 남겨 디버깅을 쉽게 함
+            echo "----- begin downloaded file head -----"
+            head -n 200 cmdline-tools.zip || true
+            echo "------ end downloaded file head ------"
+            exit 1
+          fi
+
+          # 3) 압축해제 및 디렉터리 정리 (sdkmanager가 cmdline-tools/latest/bin 에 있도록)
+          unzip -q cmdline-tools.zip -d $ANDROID_SDK_ROOT/cmdline-tools
+          # some zip packages contain a 'cmdline-tools' root folder, normalize to 'latest'
+          if [ -d "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" ]; then
+            mkdir -p $ANDROID_SDK_ROOT/cmdline-tools/latest
+            mv $ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools/* $ANDROID_SDK_ROOT/cmdline-tools/latest/
+          elif [ -d "$ANDROID_SDK_ROOT/cmdline-tools/tools" ]; then
+            mkdir -p $ANDROID_SDK_ROOT/cmdline-tools/latest
+            mv $ANDROID_SDK_ROOT/cmdline-tools/tools/* $ANDROID_SDK_ROOT/cmdline-tools/latest/
+          fi
+
           export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin
-          # 필수 툴/플랫폼/빌드툴 설치 (buildozer.spec의 android.api/ndk와 맞춰 변경 가능)
+
+          # 4) 라이선스 자동 동의 및 필수 패키지 설치
           yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
           $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-31" "build-tools;36.1.0" --install-if-needed
-
-      - name: Show installed SDK tools
-        env:
-          ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-        run: |
-          export PATH=$PATH:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
-          ls -la $ANDROID_SDK_ROOT/build-tools || true
-          which aidl || true
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --list || true
-
-      - name: Build APK (debug)
-        env:
-          ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-          JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
-        run: |
-          export PATH=$PATH:$HOME/.local/bin:$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools
-          # sanity check
-          aidl --version || echo "aidl not found yet"
-          buildozer -v android debug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: apk
-          path: bin/*.apk
