--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,81 +1,15 @@
-- name: Install Android commandline tools + SDK + build-tools (robust)
-        env:
-          ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
-          REPO_OS_OVERRIDE: linux
-          JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
-        run: |
-          set -euo pipefail
-          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-          cd /tmp
+name: Build APK
 
-          # 1) try to extract URL from developer.android.com
-          TOOL_URL=$(curl -sL https://developer.android.com/studio | \
-            grep -oE 'https://dl.google.com/android/repository/commandlinetools-linux-[0-9_]+_latest.zip' | head -n1 || true)
+on:
+  push:
+    branches: [ main ]
 
-          # 2) fallback list (common known filenames) — if extraction fails, try these
-          if [ -z "$TOOL_URL" ]; then
-            echo "Could not auto-detect commandlinetools URL. Trying fallbacks..."
-            FALLBACKS=(
-              "https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip"
-              "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip"
-              "https://dl.google.com/android/repository/commandlinetools-linux-6609375_latest.zip"
-            )
-            for u in "${FALLBACKS[@]}"; do
-              echo "Trying $u"
-              if wget -q --spider "$u"; then
-                TOOL_URL="$u"
-                break
-              fi
-            done
-          fi
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-          if [ -z "$TOOL_URL" ]; then
-            echo "ERROR: couldn't find a commandlinetools download URL automatically."
-            exit 1
-          fi
+    steps:
+      - uses: actions/checkout@v3
 
-          echo "Downloading command line tools from: $TOOL_URL"
-          wget -q "$TOOL_URL" -O cmdline-tools.zip || { echo "wget failed"; ls -l cmdline-tools.zip || true; exit 1; }
-
-          # 3) verify it's a valid zip (avoid HTML 404 saved as .zip)
-          if ! unzip -tq cmdline-tools.zip >/dev/null 2>&1; then
-            echo "Downloaded file is NOT a valid zip. Dump first 200 bytes for debugging:"
-            hexdump -C cmdline-tools.zip | head -n 30 || true
-            echo "Also show head of file as text:"
-            head -n 200 cmdline-tools.zip || true
-            exit 1
-          fi
-
-          # 4) unzip and normalize to cmdline-tools/latest
-          unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
-          if [ -d "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" ]; then
-            mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-            mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools"/* "$ANDROID_SDK_ROOT/cmdline-tools/latest/"
-          elif [ -d "$ANDROID_SDK_ROOT/cmdline-tools/tools" ]; then
-            mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-            mv "$ANDROID_SDK_ROOT/cmdline-tools/tools"/* "$ANDROID_SDK_ROOT/cmdline-tools/latest/"
-          fi
-
-          # 5) export PATH via GITHUB_ENV so later steps can use sdkmanager/adb/aidl
-          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH" >> $GITHUB_ENV
-
-          # 6) sanity checks & accept licenses
-          SDKMAN="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          if [ ! -x "$SDKMAN" ]; then
-            echo "ERROR: sdkmanager not found at $SDKMAN"
-            ls -la "$ANDROID_SDK_ROOT/cmdline-tools/latest" || true
-            exit 1
-          fi
-
-          echo "sdkmanager version (help):"
-          "$SDKMAN" --version || true
-
-          echo "Accepting licenses..."
-          yes | "$SDKMAN" --sdk_root="$ANDROID_SDK_ROOT" --licenses || true
-
-          echo "Installing platform-tools, platform 31 and build-tools 36.1.0"
-          "$SDKMAN" --sdk_root="$ANDROID_SDK_ROOT" --install "platform-tools" "platforms;android-31" "build-tools;36.1.0" --verbose
-
-          echo "List installed packages:"
-          "$SDKMAN" --sdk_root="$ANDROID_SDK_ROOT" --list
+      - name: Echo test
+        run: echo "Build workflow loaded"
