--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,82 +1,18 @@
-- name: Install Android SDK (for Buildozer) and accept licenses
-        env:
-          TARGET_SDK_ROOT: ${{ runner.temp }}/.buildozer-sdk
-          BOOZ_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
-          JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
+name: Build APK
+
+on:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Echo test
         run: |
-          set -euo pipefail
-          # Buildozer expects SDK under $HOME/.buildozer/android/platform/android-sdk
-          mkdir -p "$BOOZ_SDK_ROOT"
-          mkdir -p "$TARGET_SDK_ROOT/cmdline-tools"
-          cd /tmp
-
-          # get real download URL from developer.android.com (best-effort)
-          TOOL_URL=$(curl -sL https://developer.android.com/studio | \
-            grep -oE 'https://dl.google.com/android/repository/commandlinetools-linux-[0-9_]+_latest.zip' | head -n1 || true)
-
-          # fallback known names if auto-detect fails
-          if [ -z "$TOOL_URL" ]; then
-            FALLBACKS=(
-              "https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip"
-              "https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip"
-            )
-            for u in "${FALLBACKS[@]}"; do
-              if wget -q --spider "$u"; then
-                TOOL_URL="$u"
-                break
-              fi
-            done
-          fi
-
-          if [ -z "$TOOL_URL" ]; then
-            echo "ERROR: couldn't find commandlinetools download URL automatically."
-            exit 1
-          fi
-
-          echo "Downloading command line tools from: $TOOL_URL"
-          wget -q "$TOOL_URL" -O cmdline-tools.zip
-
-          # validate zip (avoid HTML 404 saved as zip)
-          if ! unzip -tq cmdline-tools.zip >/dev/null 2>&1; then
-            echo "Downloaded file is NOT a valid zip. Dump head for debugging:"
-            head -n 200 cmdline-tools.zip || true
-            exit 1
-          fi
-
-          unzip -q cmdline-tools.zip -d "$TARGET_SDK_ROOT/cmdline-tools"
-
-          # normalize so sdkmanager is at $TARGET_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager
-          if [ -d "$TARGET_SDK_ROOT/cmdline-tools/cmdline-tools" ]; then
-            mkdir -p "$TARGET_SDK_ROOT/cmdline-tools/latest"
-            mv "$TARGET_SDK_ROOT/cmdline-tools/cmdline-tools"/* "$TARGET_SDK_ROOT/cmdline-tools/latest/"
-          elif [ -d "$TARGET_SDK_ROOT/cmdline-tools/tools" ]; then
-            mkdir -p "$TARGET_SDK_ROOT/cmdline-tools/latest"
-            mv "$TARGET_SDK_ROOT/cmdline-tools/tools"/* "$TARGET_SDK_ROOT/cmdline-tools/latest/"
-          fi
-
-          SDKMAN="$TARGET_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager"
-          chmod +x "$SDKMAN"
-
-          # Ensure PATH for this step (we'll install into TARGET_SDK_ROOT then move)
-          export PATH="$TARGET_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
-
-          # accept licenses for the SDK root we will copy into BOOZ_SDK_ROOT
-          yes | "$SDKMAN" --sdk_root="$TARGET_SDK_ROOT" --licenses
-
-          # install platform-tools/platforms/build-tools into TARGET_SDK_ROOT
-          "$SDKMAN" --sdk_root="$TARGET_SDK_ROOT" --install "platform-tools" "platforms;android-31" "build-tools;36.1.0"
-
-          # copy/move installed SDK into buildozer's expected path
-          mkdir -p "$BOOZ_SDK_ROOT"
-          # copy to preserve permissions; if copy too slow, consider mv instead
-          rsync -a "$TARGET_SDK_ROOT/" "$BOOZ_SDK_ROOT/"
-
-          # sanity checks
-          echo "Contents of buildozer SDK root:"
-          ls -la "$BOOZ_SDK_ROOT" || true
-          ls -la "$BOOZ_SDK_ROOT/build-tools" || true
-          which "$BOOZ_SDK_ROOT/build-tools/36.1.0/aidl" || true
-
-          # expose SDK path for subsequent steps
-          echo "ANDROID_SDK_ROOT=$BOOZ_SDK_ROOT" >> $GITHUB_ENV
-          echo "PATH=$BOOZ_SDK_ROOT/cmdline-tools/latest/bin:$BOOZ_SDK_ROOT/platform-tools:$PATH" >> $GITHUB_ENV
+          echo "Build workflow loaded"
